439690  [Update] Base View Update 50% Finished Overall.

--- a/addons/base_setup/views/res_config_settings_views.xml
+++ b/addons/base_setup/views/res_config_settings_views.xml
@@ -278,7 +278,7 @@
         <menuitem
             id="menu_config"
             name="System Setup"
-            parent="base.menu_administration"
+            parent="base.menu_system_overview"
             sequence="0"
             action="action_general_configuration"
             groups="base.group_system"/>
