--- a/addons/web/static/src/core/dashboard/dashboard.scss
+++ b/addons/web/static/src/core/dashboard/dashboard.scss
@@ -10,3 +10,8 @@
         padding: map-get($spacers, 3);
     }
 }
+
+.dashboard-panel-actions {
+    display: flex;
+    gap: map-get($spacers, 1);
+}
