--- a/addons/http_routing/views/http_routing_template.xml
+++ b/addons/http_routing/views/http_routing_template.xml
@@ -122,26 +122,25 @@
                 <t t-out="0"/>
                 <div class="oe_structure oe_empty">
                     <section class="s_text_image pt104 pb104" data-snippet="s_image_text" data-name="Image - Text">
-                        <div class="container">
+                        <div class="container card p-3 shadow-sm rounded" style="max-width: 640px;">
                             <div class="row align-items-center">
-                                <div class="col-lg-4 pb32">
-                                    <img class="img img-fluid mx-auto" src="/html_editor/shape/http_routing/404.svg?c2=o-color-2" alt=""/>
+                                <div class="col-lg-4">
+                                    <!-- <img class="img img-fluid mx-auto" src="/html_editor/shape/http_routing/404.svg?c2=o-color-2" alt=""/> -->
+                                    <div class="display-1 d-flex justify-content-center"
+                                         style="font-weight: 900;">
+                                        404
+                                    </div>
                                 </div>
                                 <div class="col-lg-8 text-lg-start text-center my-auto">
                                     <h1 class="visually-hidden">Error 404</h1>
-                                    <h2>We couldn't find the page you're looking for!</h2>
-                                    <p></p>
-                                    <p><b>Don't panic.</b> If you think it's our mistake, please send us a message on <a href="/contactus">this page</a>.</p>
+                                    <h2 class="mb-0">Page Not Found</h2>
+                                    <p class="mb-0 text-muted small"><b>Don't panic.</b> If you think it's our mistake, please send us a message on <a href="/contactus">this page</a>.</p>
                                 </div>
-                                <div class="col-lg-12">
-                                    <div class="s_hr pt32 pb48" data-snippet="s_hr" data-name="Separator">
-                                        <hr class="w-100 mx-auto" style="border-top-width: 1px; border-top-style: solid; border-top-color: var(--400);"/>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12">
-                                    <p class="text-center">Maybe you were looking for one of these <b>popular pages?</b></p>
+                                <div class="col-lg-12 mt-3">
+                                    <p class="text-muted text-center">Please verify the URL or return to the dashboard. If you believe this is a system error, contact your administrator.</p>
                                     <ul class="list-inline text-center">
-                                        <li class="list-inline-item mb-2"><a href="/" class="btn btn-primary">Home</a></li>
+                                        <li class="list-inline-item mb-2"><a href="/" class="btn btn-primary">Go to Home</a></li>
+                                        <li class="list-inline-item mb-2"><button onclick="history.back()" class="btn btn-outline-primary">Go Back</button></li>
                                     </ul>
                                 </div>
                             </div>
