--- a/addons/resource/views/menuitems.xml
+++ b/addons/resource/views/menuitems.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <inphms>
     <menuitem id="menu_resource_config" name="Resource"
-        parent="base.menu_custom"
+        parent="base.menu_administration"
+        groups="base.group_no_one"
         sequence="30"/>
     <menuitem id="menu_resource_calendar"
         parent="menu_resource_config"
