--- a/inphms/addons/base/views/ir_actions_views.xml
+++ b/inphms/addons/base/views/ir_actions_views.xml
@@ -47,7 +47,7 @@
             <field name="view_id" ref="action_view_tree"/>
             <field name="search_view_id" ref="action_view_search"/>
         </record>
-        <menuitem id="next_id_6" name="Actions" parent="base.menu_custom" sequence="5"/>
+        <menuitem id="next_id_6" name="Actions" parent="base.menu_administration" groups="base.group_no_one" sequence="5"/>
         <menuitem action="ir_sequence_actions" id="menu_ir_sequence_actions" parent="next_id_6"/>
 
         <!-- ir.actions.report -->
