--- a/inphms/addons/base/views/res_lang_views.xml
+++ b/inphms/addons/base/views/res_lang_views.xml
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                         </group>
-                        <group string="Definition" class="border rounded mx-0 i__group">
+                        <group string="Definition" name="definition" class="border rounded mx-0 i__group">
                             <group>
                                 <field name="name" placeholder="e.g. French"/>
                                 <field name="code"/>
