--- a/addons/resource/views/resource_resource_views.xml
+++ b/addons/resource/views/resource_resource_views.xml
@@ -35,7 +35,7 @@
                 <field name="active" invisible="1" />
                 <field name="company_id" invisible="1"/>
                 <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active"/>
-                <group>
+                <group string="Definition" class="rounded border mb-4 mx-0 i__group">
                     <group name="user_details">
                         <field name="name"/>
                         <field name="user_id" invisible="resource_type == 'material'" required="resource_type == 'user'"/>
