--- a/addons/base_geolocalize/views/geo_provider_view.xml
+++ b/addons/base_geolocalize/views/geo_provider_view.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
                 <form create="0" delete="0">
                     <sheet>
-                        <group>
+                        <group string="Definition" class="border rounded mb-4 mx-0 i__group">
                             <group>
                                 <field name="name"/>
                             </group>
