--- a/addons/mail/views/mail_tracking_value_views.xml
+++ b/addons/mail/views/mail_tracking_value_views.xml
@@ -30,28 +30,30 @@
             <field name="arch" type="xml">
                 <form string="Tracking Value">
                     <sheet>
-                        <group name="field_details" string="Field details">
-                            <field name="field_id"/>
-                        </group>
-                        <group name="values">
-                            <group name="old_values" string="Old values">
-                                <field name="old_value_integer"/>
-                                <field name="old_value_float"/>
-                                <field name="old_value_char"/>
-                                <field name="old_value_text"/>
-                                <field name="old_value_datetime"/>
+                        <!-- <group string="Definition" class="rounded border mb-4 mx-0 i__group"> -->
+                            <group colspan="2" name="field_details" string="Field details">
+                                <field name="field_id"/>
                             </group>
-                            <group name="new_values" string="New values">
-                                <field name="new_value_integer"/>
-                                <field name="new_value_float"/>
-                                <field name="new_value_char"/>
-                                <field name="new_value_text"/>
-                                <field name="new_value_datetime"/>
+                            <group colspan="2" name="values">
+                                <group name="old_values" string="Old values">
+                                    <field name="old_value_integer"/>
+                                    <field name="old_value_float"/>
+                                    <field name="old_value_char"/>
+                                    <field name="old_value_text"/>
+                                    <field name="old_value_datetime"/>
+                                </group>
+                                <group name="new_values" string="New values">
+                                    <field name="new_value_integer"/>
+                                    <field name="new_value_float"/>
+                                    <field name="new_value_char"/>
+                                    <field name="new_value_text"/>
+                                    <field name="new_value_datetime"/>
+                                </group>
                             </group>
-                        </group>
-                        <group string='Related Message'>
-                            <field name="mail_message_id"/>
-                        </group>
+                            <group colspan="2" string='Related Message'>
+                                <field name="mail_message_id"/>
+                            </group>
+                        <!-- </group> -->
                     </sheet>
                 </form>
             </field>
