--- a/addons/mail/views/res_users_settings_views.xml
+++ b/addons/mail/views/res_users_settings_views.xml
@@ -20,7 +20,33 @@
         <field name="arch" type="xml">
             <form string="User Settings">
                 <sheet>
-                    <div class="oe_title">
+                    <div>
+                        <group class="rounded border mb-4 mx-0 i__group" string="Definition">
+                            <group colspan="2" class="mb-3">
+                                <field name="user_id" readonly="id != False"/>
+                            </group>
+                            <group colspan="2" name="discuss_user_settings" class="mx-0 px-0">
+                                <group string="Discuss sidebar">
+                                    <field name="is_discuss_sidebar_category_channel_open"/>
+                                    <field name="is_discuss_sidebar_category_chat_open"/>
+                                </group>
+                                <group string="Voice">
+                                    <field name="use_push_to_talk"/>
+                                    <field name="push_to_talk_key" placeholder="e.g. true.true..f" invisible="not use_push_to_talk"/>
+                                    <field name="voice_active_duration" invisible="use_push_to_talk"/>
+                                </group>
+                            </group>
+                        </group>
+                        <group class="rounded border mb-4 i__group" string="Volume per partner" name="page_volume_per_partner">
+                            <field name="volume_settings_ids">
+                                <list editable="bottom">
+                                    <field name="partner_id"/>
+                                    <field name="volume"/>
+                                </list>
+                            </field>
+                        </group>
+                    </div>
+                    <!-- <div class="oe_title">
                         <h1><field name="user_id" readonly="id != False"/></h1>
                     </div>
                     <group name="discuss_user_settings">
@@ -43,7 +69,7 @@
                                 </list>
                             </field>
                         </page>
-                    </notebook>
+                    </notebook> -->
                 </sheet>
             </form>
         </field>
